scaffolder-templates/gitlab/vote-ui-python/skeleton/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pipelines-vote-ui
  name: pipelines-vote-ui
spec:
  type: ClusterIP
  ports:
    - name: 8080-tcp
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: pipelines-vote-ui
