scaffolder-templates/gitlab/vote-ui-python/skeleton/k8s/el-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: vote-ui
  name: el-vote-ui
spec:
  port:
    targetPort: http-listener
  to:
    kind: Service
    name: el-vote-ui
    weight: 100
